--- a/site-sheet/accueil.html
+++ b/site-sheet/accueil.html
@@ -59,7 +59,7 @@
                     <p>SQL</p>
                 </div>
                 <div class="skill">
-                    <img src="path/to/java-logo.png" alt="Java Logo">
+                    <img src="../picture/javalogo-removebg-preview.png" alt="Java Logo">
                     <p>Java</p>
                 </div>
                 <div class="skill">
@@ -82,7 +82,7 @@
                     <p>IntelliJ IDEA</p>
                 </div>
                 <div class="tool">
-                    <img src="path/to/wamp-logo.png" alt="WAMP Logo">
+                    <img src="../picture/WAMPlogo-removebg-preview.png" alt="WAMP Logo">
                     <p>WAMP</p>
                 </div>
                 <div class="tool">
