--- a/site-sheet/accueil.html
+++ b/site-sheet/accueil.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="entreprise.html">Entreprise</a></li>
-                <li><a href="realisation.html">Réalisation</a></li>
+                <li><a href="realisations.html">Réalisations</a></li>
                 <li><a href="veille.html">Veille</a></li>
                 <li><a href="bilan.html">Bilan</a></li>
             </ul>
@@ -30,21 +30,26 @@
             <div>
                 <h2>À propos de moi</h2>
                 <p>Je m'appelle <strong>Enzo Pace</strong>, étudiant en <strong>BTS Systèmes Informatiques aux Organisations (SLAM)</strong>. Passionné par le développement logiciel et les nouvelles technologies, je développe des compétences en programmation, gestion de projet IT, et travail d'équipe.</p>
+                
+                <!-- Bouton de téléchargement du CV -->
+                <a href="CV_Enzo_Pace2024.pdf" class="btn-cv" download="Enzo_Pace_CV.pdf">Télécharger mon CV</a>
             </div>
             <img class="profile-photo" src="profile.jpg" alt="Photo de profil Enzo Pace">
         </section>
+        
 
         <!-- Compétences Techniques -->
         <section id="skills">
             <h2>Compétences Techniques</h2>
-            <div class="skills-container">
-                <div class="skill">
-                    <img src="path/to/javascript-logo.png" alt="JavaScript Logo">
-                    <p>JavaScript</p>
-                </div>
+                <div class="skills-container">
+
                 <div class="skill">
                     <img src="../picture/pythonlogo-removebg-preview.png" alt="Python Logo">
                     <p>Python</p>
+                </div>            
+                <div class="skill">
+                    <img src="../picture/jslogo.jpg" alt="JavaScript Logo">
+                    <p>JavaScript</p>
                 </div>
                 <div class="skill">
                     <img src="../picture/htmllogo-removebg-preview.png" alt="HTML Logo">
@@ -55,7 +60,7 @@
                     <p>CSS</p>
                 </div>
                 <div class="skill">
-                    <img src="../picture/sqllogo-removebg-preview.png" alt="SQL Logo">
+                    <img src="../picture/sqlogov2-removebg-preview.png" alt="SQL Logo">
                     <p>SQL</p>
                 </div>
                 <div class="skill">
@@ -63,7 +68,15 @@
                     <p>Java</p>
                 </div>
                 <div class="skill">
-                    <img src="path/to/csharp-logo.png" alt="C# Logo">
+                    <img src="../picture/vbalogo-removebg-preview.png" alt="VBA Logo">
+                    <p>VBA</p>
+                </div>
+                <div class="skill">
+                    <img src="../picture/vb6-removebg-preview.png" alt="VB6 Logo">
+                    <p>VB6</p>
+                </div>
+                <div class="skill">
+                    <img src="../picture/csharplogo-removebg-preview.png" alt="C# Logo">
                     <p>C#</p>
                 </div>
             </div>
@@ -90,8 +103,8 @@
                     <p>GitHub</p>
                 </div>
                 <div class="tool">
-                    <img src="path/to/docker-logo.png" alt="Docker Logo">
-                    <p>Docker</p>
+                    <img src="../picture/notionlogo.png" alt="Notion Logo">
+                    <p>Notion</p>
                 </div>
                 <div class="tool">
                     <img src="path/to/git-logo.png" alt="Git Logo">
