--- a/site-sheet/veille.html
+++ b/site-sheet/veille.html
@@ -1,40 +1,61 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
+<html lang="fr">
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="../css/index.css" />
-  </head>
-  <body>
-    <header>
-      <nav>
-        <ul>
-          <li><a href="accueil.html">Accueil</a></li>
-          <li><a href="entreprise.html">Entreprise</a></li>
-          <li><a href="Realisation.html">Realisations</a></li>
-          <li><a href="veille.html">Veille</a></li>
-          <li><a href="bilan.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <h2 class="section-title">Veille</h2>
-      <div class="articles-container">
-        <article class="article">
-          <h2>Article 1</h2>
-          <p>Contenu de l'article 1.</p>
-        </article>
-        <article class="article">
-          <h2>Article 2</h2>
-          <p>Contenu de l'article 2.</p>
-        </article>
-        <article class="article">
-          <h2>Article 3</h2>
-          <p>Contenu de l'article 3.</p>
-        </article>
-      </div>
-    </main>
-    <script src="js/index.js"></script>
-  </body>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Veille - Enzo Pace</title>
+    <link rel="stylesheet" href="../style-sheet/veille.css" />
+</head>
+<body>
+
+<!-- En-tête de la page avec le menu de navigation -->
+<header>
+    <div class="container">
+        <h1>Veille Technologique</h1>
+        <nav>
+            <ul>
+                <li><a href="accueil.html">Accueil</a></li>
+                <li><a href="entreprise.html">Entreprise</a></li>
+                <li><a href="realisations.html">Réalisations</a></li>
+                <li><a href="bilan.html">Bilan</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
+<!-- Contenu principal de la page -->
+<main>
+    <div class="content">
+        <h2>Articles de Veille Technologique</h2>
+        
+        <!-- Conteneur des articles de veille -->
+        <div class="articles-container">
+            <article class="article">
+                <h3>Article 1</h3>
+                <p>Contenu de l'article 1. Résumé ou description du sujet abordé dans la veille technologique.</p>
+            </article>
+
+            <article class="article">
+                <h3>Article 2</h3>
+                <p>Contenu de l'article 2. Résumé ou description du sujet abordé dans la veille technologique.</p>
+            </article>
+
+            <article class="article">
+                <h3>Article 3</h3>
+                <p>Contenu de l'article 3. Résumé ou description du sujet abordé dans la veille technologique.</p>
+            </article>
+        </div>
+    </div>
+</main>
+
+<!-- Pied de page -->
+<footer>
+    <div class="container">
+        <p>Passez du temps à découvrir mes autres projets dans les différentes sections du site !</p>
+    </div>
+</footer>
+
+<script src="js/index.js"></script>
+</body>
 </html>
