--- a/site-sheet/entreprise.html
+++ b/site-sheet/entreprise.html
@@ -14,7 +14,7 @@
             <nav>
                 <ul>
                     <li><a href="accueil.html">Accueil</a></li>
-                    <li><a href="realisations.html">Réalisation</a></li>
+                    <li><a href="realisations.html">Réalisations</a></li>
                     <li><a href="veille.html">Veille</a></li>
                     <li><a href="bilan.html">Bilan</a></li>
                 </ul>
