--- a/site-sheet/bilan.html
+++ b/site-sheet/bilan.html
@@ -15,9 +15,10 @@
         <nav>
             <ul>
                 <li><a href="accueil.html">Accueil</a></li>
-                <li><a href="entreprise.html" class="active">Bilan</a></li> 
+                <li><a href="entreprise.html">Entreprise</a></li>
                 <li><a href="realisations.html">Réalisations</a></li>
                 <li><a href="veille.html">Veille</a></li>
+                <li><a href="bilan.html">Bilan</a></li>
                 
             </ul>
         </nav>
