--- a/site-sheet/veille.html
+++ b/site-sheet/veille.html
@@ -18,6 +18,7 @@
                 <li><a href="accueil.html">Accueil</a></li>
                 <li><a href="entreprise.html">Entreprise</a></li>
                 <li><a href="realisations.html">Réalisations</a></li>
+                <li><a href="veille.html">Veille</a></li>
                 <li><a href="bilan.html">Bilan</a></li>
             </ul>
         </nav>
