--- a/site-sheet/realisations.html
+++ b/site-sheet/realisations.html
@@ -107,10 +107,23 @@
     </div>
 </div>
 
-<!-- Pied de page -->
 <footer>
     <div class="container">
-        <p>&copy; 2024 Enzo Pace - Tous droits réservés</p>
+        <!-- Section des informations personnelles (email et téléphone) -->
+        <div class="contact-info">
+            <p><strong>Email :</strong> <a href="mailto:enzopace05@gmail.com">enzopace05@gmail.com</a></p>
+            <p><strong>Téléphone :</strong> 06 16 25 49 14</p>
+        </div>
+        
+        <!-- Section des icônes sociales -->
+        <div class="social-icons">
+            <a href="https://linkedin.com" target="_blank"><img src="../picture/logo-linkedin-noir.jpg" alt="LinkedIn"></a>
+            <a href="https://www.instagram.com/enzo.sunchine/profilecard/?igsh=bHphdDNjeHd3aHdj" target="_blank"><img src="../picture/logo-instagram-noir-png.jpg" alt="Instagram"></a>
+            <a href="https://github.com/enzopc05" target="_blank"><img src="../picture/githublogo-removebg-preview.png" alt="GitHub"></a>
+        </div>
+
+        <!-- Section Copyright -->
+        <p>© Enzo Pace 2024</p>
     </div>
 </footer>
 
