--- a/site-sheet/realisations.html
+++ b/site-sheet/realisations.html
@@ -74,11 +74,26 @@
     </div>
 </main>
 
-<!-- Modale pour chaque projet -->
+<!-- Modale pour chaque projet avec logos des participants et des langages -->
 <div id="modal1" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Détails du Projet École 1</h2>
+        <!-- Informations supplémentaires -->
+        <div class="project-info">
+            <div class="project-detail">
+                <img src="../picture/equipe-removebg-preview.png" alt="Participants" class="icon">
+                <p>3 Participants</p>
+            </div>
+            <div class="project-detail">
+                <img src="../picture/ordi-removebg-preview.png" alt="Technologies" class="icon">
+                <div class="languages-used">
+                    <img src="../picture/pythonlogo-removebg-preview.png" alt="Python Logo" class="language-logo">
+                    <img src="../picture/jslogo.jpg" alt="JavaScript Logo" class="language-logo">
+                    <img src="../picture/htmllogo-removebg-preview.png" alt="HTML Logo" class="language-logo">
+                </div>
+            </div>
+        </div>
         <p>Informations détaillées sur le projet réalisé à l'école.</p>
     </div>
 </div>
@@ -87,6 +102,19 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Détails du Projet École 2</h2>
+        <div class="project-info">
+            <div class="project-detail">
+                <img src="../picture/equipe-removebg-preview.png" alt="Participants" class="icon">
+                <p>4 Participants</p>
+            </div>
+            <div class="project-detail">
+                <img src="../picture/ordi-removebg-preview.png" alt="Technologies" class="icon">
+                <div class="languages-used">
+                    <img src="../picture/csslogo-removebg-preview.png" alt="CSS Logo" class="language-logo">
+                    <img src="../picture/javalogo-removebg-preview.png" alt="Java Logo" class="language-logo">
+                </div>
+            </div>
+        </div>
         <p>Informations détaillées sur le projet réalisé à l'école.</p>
     </div>
 </div>
@@ -95,6 +123,19 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Détails du Projet Entreprise 1</h2>
+        <div class="project-info">
+            <div class="project-detail">
+                <img src="../picture/equipe-removebg-preview.png" alt="Participants" class="icon">
+                <p>5 Participants</p>
+            </div>
+            <div class="project-detail">
+                <img src="../picture/ordi-removebg-preview.png" alt="Technologies" class="icon">
+                <div class="languages-used">
+                    <img src="../picture/sqllogo-removebg-preview.png" alt="SQL Logo" class="language-logo">
+                    <img src="../picture/phplogo-removebg-preview.png" alt="PHP Logo" class="language-logo">
+                </div>
+            </div>
+        </div>
         <p>Informations détaillées sur le projet réalisé en entreprise.</p>
     </div>
 </div>
@@ -103,9 +144,26 @@
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Détails du Projet Entreprise 2</h2>
+        <div class="project-info">
+            <div class="project-detail">
+                <img src="../picture/equipe-removebg-preview.png" alt="Participants" class="icon">
+                <p>2 Participants</p>
+            </div>
+            <div class="project-detail">
+                <img src="../picture/ordi-removebg-preview.png" alt="Technologies" class="icon">
+                <div class="languages-used">
+                    <img src="../picture/pythonlogo-removebg-preview.png" alt="Python Logo" class="language-logo">
+                    <img src="../picture/githublogo-removebg-preview.png" alt="GitHub Logo" class="language-logo">
+                </div>
+            </div>
+        </div>
         <p>Informations détaillées sur le projet réalisé en entreprise.</p>
     </div>
 </div>
+
+
+
+
 
 <footer>
     <div class="container">
