--- a/site-sheet/realisations.html
+++ b/site-sheet/realisations.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Réalisations - Enzo Pace</title>
     <link rel="stylesheet" href="../style-sheet/realisations.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -74,17 +75,19 @@
     </div>
 </main>
 
-<!-- Modale pour chaque projet avec logos des participants et des langages -->
+<!-- Modale pour Projet École 1 -->
 <div id="modal1" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Détails du Projet École 1</h2>
         <!-- Informations supplémentaires -->
         <div class="project-info">
+            <!-- Participants -->
             <div class="project-detail">
                 <img src="../picture/equipe-removebg-preview.png" alt="Participants" class="icon">
                 <p>3 Participants</p>
             </div>
+            <!-- Technologies utilisées -->
             <div class="project-detail">
                 <img src="../picture/ordi-removebg-preview.png" alt="Technologies" class="icon">
                 <div class="languages-used">
@@ -93,20 +96,28 @@
                     <img src="../picture/htmllogo-removebg-preview.png" alt="HTML Logo" class="language-logo">
                 </div>
             </div>
+            <!-- Durée du projet -->
+            <div class="project-detail">
+                <img src="../picture/horlogelogo-removebg-preview.png" alt="Durée" class="icon">
+                <p>3 mois</p>
+            </div>
         </div>
         <p>Informations détaillées sur le projet réalisé à l'école.</p>
     </div>
 </div>
 
+<!-- Modale pour Projet École 2 -->
 <div id="modal2" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Détails du Projet École 2</h2>
         <div class="project-info">
+            <!-- Participants -->
             <div class="project-detail">
                 <img src="../picture/equipe-removebg-preview.png" alt="Participants" class="icon">
                 <p>4 Participants</p>
             </div>
+            <!-- Technologies utilisées -->
             <div class="project-detail">
                 <img src="../picture/ordi-removebg-preview.png" alt="Technologies" class="icon">
                 <div class="languages-used">
@@ -114,20 +125,28 @@
                     <img src="../picture/javalogo-removebg-preview.png" alt="Java Logo" class="language-logo">
                 </div>
             </div>
+            <!-- Durée du projet -->
+            <div class="project-detail">
+                <img src="../picture/horlogelogo-removebg-preview.png" alt="Durée" class="icon">
+                <p>4 mois</p>
+            </div>
         </div>
         <p>Informations détaillées sur le projet réalisé à l'école.</p>
     </div>
 </div>
 
+<!-- Modale pour Projet Entreprise 1 -->
 <div id="modal3" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Détails du Projet Entreprise 1</h2>
         <div class="project-info">
+            <!-- Participants -->
             <div class="project-detail">
                 <img src="../picture/equipe-removebg-preview.png" alt="Participants" class="icon">
                 <p>5 Participants</p>
             </div>
+            <!-- Technologies utilisées -->
             <div class="project-detail">
                 <img src="../picture/ordi-removebg-preview.png" alt="Technologies" class="icon">
                 <div class="languages-used">
@@ -135,20 +154,28 @@
                     <img src="../picture/phplogo-removebg-preview.png" alt="PHP Logo" class="language-logo">
                 </div>
             </div>
+            <!-- Durée du projet -->
+            <div class="project-detail">
+                <img src="../picture/horlogelogo-removebg-preview.png" alt="Durée" class="icon">
+                <p>6 mois</p>
+            </div>
         </div>
         <p>Informations détaillées sur le projet réalisé en entreprise.</p>
     </div>
 </div>
 
+<!-- Modale pour Projet Entreprise 2 -->
 <div id="modal4" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
         <h2>Détails du Projet Entreprise 2</h2>
         <div class="project-info">
+            <!-- Participants -->
             <div class="project-detail">
                 <img src="../picture/equipe-removebg-preview.png" alt="Participants" class="icon">
                 <p>2 Participants</p>
             </div>
+            <!-- Technologies utilisées -->
             <div class="project-detail">
                 <img src="../picture/ordi-removebg-preview.png" alt="Technologies" class="icon">
                 <div class="languages-used">
@@ -156,14 +183,15 @@
                     <img src="../picture/githublogo-removebg-preview.png" alt="GitHub Logo" class="language-logo">
                 </div>
             </div>
+            <!-- Durée du projet -->
+            <div class="project-detail">
+                <img src="../picture/horlogelogo-removebg-preview.png" alt="Durée" class="icon">
+                <p>2 mois</p>
+            </div>
         </div>
         <p>Informations détaillées sur le projet réalisé en entreprise.</p>
     </div>
 </div>
-
-
-
-
 
 <footer>
     <div class="container">
