--- a/site-sheet/veille.html
+++ b/site-sheet/veille.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Veille - Enzo Pace</title>
     <link rel="stylesheet" href="../style-sheet/veille.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
